# uncle-funkle

./: .gitignore  Cargo.toml  LICENSE  README.md  llms.txt  package.json
.githooks/: pre-push
.github/workflows/: ci.yml
.uncle_funkle/: state.json
npm/darwin-arm64/: package.json  unfuk
npm/linux-x64/: package.json
npm/win32-x64/: package.json
scripts/: check-version-sync.js  setup-git-hooks.js
skills/uncle-funkle/: SKILL.md
src/: config.rs  error.rs  lib.rs  main.rs  merge.rs  model.rs  plan.rs  scan.rs  scoring.rs  state_io.rs  util.rs
tests/: smoke.rs
