[package]
name = "uncle-funkle"
version = "0.1.1"
edition = "2021"
rust-version = "1.89"
license = "MIT"
description = "Uncle Funkle is a tool for finding AI slop in your code."
readme = "README.md"
keywords = ["quality", "static-analysis", "tech-debt", "scanner", "tokio"]
categories = ["development-tools", "development-tools::testing"]

[lib]
name = "uncle_funkle"
path = "src/lib.rs"

[dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
